tubeplus/project/test/albc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/group.name: tubeplus-svc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-tubeplus
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-0f6ff5a6479947fde
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:533616270150:certificate/a1b60af5-826c-4064-9896-ae67695bdf7e
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 80
            path: /app
            pathType: Prefix
